--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link href="/favicon.ico" rel="icon" type="image/svg+xml"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>Plutomierz</title>
-  <script type="module" crossorigin src="/assets/main-C7TugF04.js"></script>
-  <link rel="stylesheet" crossorigin href="/assets/main-Cxrvu6wY.css">
+  <script type="module" crossorigin src="/assets/main-6V5AagX-.js"></script>
+  <link rel="stylesheet" crossorigin href="/assets/main-132GweiP.css">
 </head>
 <body>
 <div id="root"></div>
